--- a/connect.html
+++ b/connect.html
@@ -72,13 +72,13 @@
             <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll" href="index.html">Home</a>
+                    <a class="seventh nav-link before after" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll .about_yoga" href="index.html#about">About</a>
+                    <a class="seventh nav-link before after .about_yoga" href="index.html#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll" href="index.html#services">Services</a>
+                    <a class="seventh nav-link before after" href="index.html#services">Services</a>
                 </li>
                
             </ul>
@@ -87,7 +87,7 @@
             </div>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="seventh nav-link before after scroll" href="gallery.html">Gallery</a>
+                    <a class="seventh nav-link before after" href="gallery.html">Gallery</a>
                 </li>
                
                 <li class="nav-item">
@@ -115,8 +115,8 @@
         <nav class="navbar1">
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="index.html#about">About</a></li>
-            <li class="nav-item"><a class="nav-link scroll" href="index.html#services">Services</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html#about">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
             <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
             <li class="nav-item"><a class="nav-link" href="connect.html">Connect with Rue</a></li>
